# pattern_matrix

./: CMakeLists.txt  README.md
include/Matrix/: Matrix.h
include/MatrixProxy/: MatrixProxy.h
include/RealMatrix/: RealMatrix.h
src/: main.cpp
src/Matrix/: Matrix.tpp
src/RealMatrix/: RealMatrix.cpp
